...
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="PluralsCandidate">

    <string name="app_name">1Direction</string>

    <string name="nav_header_username">Guest</string>
    <string name="nav_header_email" />
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_map">Map</string>
    <string name="menu_account">Account</string>
    <string name="menu_sign">Sign In</string>
    <string name="menu_logout">Logout</string>

    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="no_loc">No location precised</string>
...
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="invalid_username">Not a valid email</string>
    <string name="invalid_password">Password must be > 5 characters</string>
    <string name="button_register_text">Register</string>
    <string name="button_sign_in_text">Sign in</string>
    <string name="clickable_text_to_sign_in">Already an account?</string>
    <string name="clickable_text_to_register">New user?</string>
    <string name="dialog_logout_tittle">Log out</string>
    <string name="dialog_logout_body">Are you sure you want to log out ?</string>
    <string name="dialog_logout_yes">Yes</string>
    <string name="dialog_logout_no">No</string>

    <string name="add_event">Add Event</string>
    <string name="fab_favorite">Fab favorite</string>
    <string name="fab_order">Fab order</string>
    <string name="recycler_view_events">Recycler view for events</string>
    <string name="update_event">Modify Event</string>
...
